# test

./: .deepsource.toml
subscription-handler-app/: BUILD.bazel  main.go  main_test.go
subscription-handler-app/subscription_helper/: BUILD.bazel  events.go  events_test.go  sns_topic_helper.go
